--- a/backend/.env-example
+++ b/backend/.env-example
@@ -1,3 +1,4 @@
 SPOTIPY_CLIENT_ID='your-spotify-client-id'
 SPOTIPY_CLIENT_SECRET='your-spotify-client-secret'
 SPOTIPY_REDIRECT_URI='your-app-redirect-url'
+FLASK_SECRET_KEY='your-flask-secret-key'
