--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,8 @@ spotipy = "^2.23.0"
 python-dotenv = "^1.0.1"
 flask = "^3.0.3"
 flask-cors = "^4.0.1"
+redis = "^5.0.5"
+flask-session = "^0.8.0"
 
 
 [build-system]
